# apartment_value

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
notebooks/: proverki.ipynb
src/: dataset_preprocess.py  download_images.py  feature_analyze.py  parser.py  parser_yandex.py  schema.py
