[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.73",
    "bs4>=0.0.2",
    "dvc[gdrive]>=3.66.1",
    "fake-useragent>=2.2.0",
    "httpx[http2]>=0.28.1",
    "pandas>=3.0.1",
    "pandera>=0.30.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
    "tqdm>=4.67.3",
]
